--- a/backend/package.json
+++ b/backend/package.json
@@ -6,18 +6,20 @@
   "scripts": {
     "dev": "nodemon -r esm server.js",
     "start": "node -r esm server.js"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.7",
     "esm": "^3.2.25",
     "express": "^4.18.1",
     "joi": "^17.6.0",
-    "mongoose": "^6.3.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.13",
     "nodemon": "^2.0.16"
   }
 }
