--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,10 @@
     "moment": "^2.30.1",
     "mongoose": "^5.12.13",
     "nodemon": "^2.0.16",
-    "redis": "^4.1.0"
+    "prom-client": "^15.1.0",
+    "redis": "^4.1.0",
+    "response-time": "^2.3.2",
+    "winston": "^3.11.0",
+    "winston-loki": "^6.0.8"
   }
 }
